--- a/src/App.css
+++ b/src/App.css
@@ -1,40 +1,73 @@
-
-.App {
-  text-align: center;
+.wrapper {
+  width: 440px;
+  height: 540px;
+  padding: 10px;
+  margin: auto;
+  border-radius: 10px;
+  background-color: #485461;
+  background-image: linear-gradient(315deg, #485461 0%, #28313b 74%);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.screen {
+  height: 100px;
+  width: 100%;
+  margin-bottom: 10px;
+  padding: 0 10px;
+  background-color: #4357692d;
+  border-radius: 10px;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: flex-end;
   color: white;
+  font-weight: bold;
+  box-sizing: border-box;
 }
 
-.App-link {
-  color: #61dafb;
+.button-box {
+  width: 100%;
+  height: calc(100% - 110px);
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  grid-gap: 2px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
+.sign-btn {
+  background-color: #fbb034;
+  border: none;
+  font-size: 24px;
+  font-weight: bold;
+  cursor: pointer;
+  outline: none;
+}
 
-  to {
-    transform: rotate(360deg);
-  }
+.sign-btn:hover {
+  background-color: rgb(255, 221, 0);
+}
+
+.keypad {
+  border: none;
+  background-color: gray;
+  font-size: 24px;
+  font-weight: bold;
+  cursor: pointer;
+  outline: none;
+}
+
+.keypad:hover {
+  background-color: rgb(211, 210, 217);
+}
+
+.zero {
+  grid-column: 1 / 3;
+  background-color: gray;
+  border: none;
+  font-size: 24px;
+  font-weight: bold;
+  cursor: pointer;
+  outline: none;
+}
+
+.zero:hover {
+  background-color: rgb(211, 210, 217);
 }
