--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -76,3 +76,20 @@ button:hover {
 .zero {
   grid-column: 1 / 3;
 }
+
+.main-container {
+  width: 1200px;
+  margin: 1rem auto;
+  border: 2px solid greenyellow;
+}
+
+.nav-bar {
+  display: flex;
+  justify-content: space-around;
+}
+
+.nav {
+  display: flex;
+  gap: 24px;
+  margin-top: 2rem;
+}
