--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -27,7 +27,7 @@ body {
 
 .screen {
   background-color: #858693;
-  height: 100px;
+  height: 70px;
   margin: 0;
   width: 100%;
   padding: 0 10px;
@@ -55,7 +55,7 @@ button {
   color: rgb(0, 0, 0);
   font-weight: bold;
   cursor: pointer;
-  height: 100px;
+  height: 80px;
   width: 100%;
 }
 
@@ -77,16 +77,21 @@ button:hover {
 }
 
 .main-container {
-  width: 90%;
-  margin: 1rem auto;
-  border: 2px solid greenyellow;
+  width: 100%;
+  border: 1px solid #858693;
 }
 
 .nav-bar {
   display: flex;
   justify-content: space-between;
-  background-color: aquamarine;
-  margin-bottom: 2rem;
+  background-color: rgb(42, 42, 42);
+  margin-bottom: 1rem;
+  padding: 0 2rem;
+}
+
+h2 {
+  font-size: 24px;
+  color: white;
 }
 
 .nav {
@@ -95,10 +100,21 @@ button:hover {
   margin-top: 1.5rem;
 }
 
+.nav a {
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.vertical-bar {
+  border-right: 1px solid rgb(255, 255, 255);
+  height: 2rem;
+}
+
 .home-section {
   width: 80%;
   margin: 3rem auto;
-  height: 100vh;
+  height: 80vh;
 }
 
 .paragraph {
@@ -120,6 +136,7 @@ p {
 .main-wrapper {
   display: flex;
   justify-content: space-between;
+  padding: 3rem;
 }
 
 .calc-title {
@@ -129,9 +146,9 @@ p {
 }
 
 .quote {
-  min-height: 100vh;
+  min-height: 90vh;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-around;
   font-weight: bold;
   padding: 4rem;
